<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nextbike.testprojekt.YourBikesActivity">

    <TextView
        android:id="@+id/success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textSize="70dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginStart="60dp" />

    <TextView
        android:id="@+id/yourBikesAre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourBikesAre"
        android:textSize="40dp"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/success"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/success"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/done"
        android:layout_width="129dp"
        android:layout_height="64dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="28dp"
        android:onClick="toAccountScreen"
        android:text="@string/logout"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
