<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nextbike.testprojekt.BikeCountActivity">

    <TextView
        android:id="@+id/bikeCountText"
        android:layout_width="0dp"
        android:layout_height="207dp"
        android:text="@string/howManyBikes"
        android:textSize="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="21dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/bikeCountNumber"
        android:layout_width="104dp"
        android:layout_height="81dp"
        android:text="1"
        android:textSize="70dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.501"
        tools:layout_editor_absoluteX="690dp"
        app:layout_constraintVertical_bias="0.501" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button

        android:id="@+id/bikeCountLess"
        android:layout_width="93dp"
        android:layout_height="91dp"
        android:text="-"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textAlignment="center"

        app:layout_constraintTop_toTopOf="@+id/bikeCountNumber"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/bikeCountNumber"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toLeftOf="@+id/bikeCountNumber"
        android:layout_marginRight="24dp"
        app:layout_constraintVertical_bias="0.545"
        tools:layout_editor_absoluteX="552dp" />

    <Button

        android:id="@+id/bikeCountMore"
        android:layout_width="93dp"
        android:layout_height="86dp"
        android:text="+"
        android:textSize="50dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/bikeCountNumber"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/bikeCountNumber"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/bikeCountNumber"
        android:layout_marginLeft="24dp"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/textBikes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bikes"
        android:textSize="40dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/bikeCountNumber" />

    <Button
        android:id="@+id/button16"
        android:layout_width="129dp"
        android:layout_height="64dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="8dp"
        android:onClick="backToMenu"
        android:text="@string/cancel"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:background="@mipmap/okaybutton"
        android:id="@+id/button17"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        android:onClick="gotToSuccessScreen"
        android:text=""
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
