<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nextbike.testprojekt.PinActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="89dp">


    <Button
        android:background="@drawable/roundedbutton"
        android:textStyle="bold"
        android:id="@+id/button4"
        android:layout_width="79dp"
        android:layout_height="87dp"
        android:layout_marginBottom="16dp"
        android:padding="20dp"
        android:text="1"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintLeft_toLeftOf="@+id/button2"
        app:layout_constraintRight_toRightOf="@+id/button2"
        tools:layout_conversion_absoluteHeight="64dp"
        tools:layout_conversion_absoluteWidth="117dp"
        tools:layout_conversion_absoluteX="237dp"
        tools:layout_conversion_absoluteY="193dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:background="@drawable/roundedbutton"
        android:textStyle="bold"
        android:id="@+id/button3"
        android:layout_width="79dp"
        android:layout_height="87dp"
        android:layout_marginBottom="@dimen/keyboard_key_margin"
        android:padding="20dp"
        android:text="2"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintLeft_toLeftOf="@+id/button5"
        app:layout_constraintRight_toRightOf="@+id/button5"
        tools:layout_conversion_absoluteHeight="64dp"
        tools:layout_conversion_absoluteWidth="117dp"
        tools:layout_conversion_absoluteX="237dp"
        tools:layout_conversion_absoluteY="193dp" />

    <Button
        android:background="@drawable/roundedbutton"
        android:textStyle="bold"
        android:id="@+id/button7"
        android:layout_width="79dp"
        android:layout_height="87dp"
        android:layout_marginBottom="@dimen/keyboard_key_margin"
        android:padding="20dp"
        android:text="3"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintLeft_toLeftOf="@+id/button6"
        app:layout_constraintRight_toRightOf="@+id/button6"
        tools:layout_conversion_absoluteHeight="64dp"
        tools:layout_conversion_absoluteWidth="117dp"
        tools:layout_conversion_absoluteX="237dp"
        tools:layout_conversion_absoluteY="193dp" />

    <Button
        android:background="@drawable/roundedbutton"
        android:textStyle="bold"
        android:id="@+id/button2"
        android:layout_width="79dp"
        android:layout_height="87dp"
        android:layout_marginBottom="@dimen/keyboard_key_margin"
        android:layout_marginRight="@dimen/keyboard_key_margin"
        android:layout_marginTop="@dimen/keyboard_key_margin"
        android:padding="20dp"
        android:text="4"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintRight_toLeftOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5"
        tools:layout_conversion_absoluteHeight="64dp"
        tools:layout_conversion_absoluteWidth="117dp"
        tools:layout_conversion_absoluteX="237dp"
        tools:layout_conversion_absoluteY="193dp" />

    <Button
        android:background="@drawable/roundedbutton"
        android:textStyle="bold"
        android:id="@+id/button5"
        android:layout_width="79dp"
        android:layout_height="87dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:padding="20dp"
        android:text="5"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389"
        tools:layout_conversion_absoluteHeight="64dp"
        tools:layout_conversion_absoluteWidth="117dp"
        tools:layout_conversion_absoluteX="237dp"
        tools:layout_conversion_absoluteY="193dp" />

    <Button
        android:background="@drawable/roundedbutton"
        android:textStyle="bold"
        android:id="@+id/button6"
        android:layout_width="79dp"
        android:layout_height="87dp"
        android:layout_marginBottom="@dimen/keyboard_key_margin"
        android:layout_marginLeft="@dimen/keyboard_key_margin"
        android:layout_marginTop="@dimen/keyboard_key_margin"
        android:padding="20dp"
        android:text="6"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5"
        tools:layout_conversion_absoluteHeight="64dp"
        tools:layout_conversion_absoluteWidth="117dp"
        tools:layout_conversion_absoluteX="237dp"
        tools:layout_conversion_absoluteY="193dp" />

    <Button
        android:background="@drawable/roundedbutton"
        android:textStyle="bold"
        android:id="@+id/button9"
        android:layout_width="79dp"
        android:layout_height="87dp"
        android:layout_marginRight="@dimen/keyboard_key_margin"
        android:layout_marginTop="@dimen/keyboard_key_margin"
        android:padding="20dp"
        android:text="7"
        android:textSize="40dp"
        app:layout_constraintRight_toLeftOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:layout_conversion_absoluteHeight="64dp"
        tools:layout_conversion_absoluteWidth="117dp"
        tools:layout_conversion_absoluteX="237dp"
        tools:layout_conversion_absoluteY="193dp" />

    <Button
        android:background="@drawable/roundedbutton"
        android:textStyle="bold"
        android:id="@+id/button8"
        android:layout_width="79dp"
        android:layout_height="87dp"
        android:layout_marginLeft="@dimen/keyboard_key_margin"
        android:layout_marginRight="@dimen/keyboard_key_margin"
        android:layout_marginTop="@dimen/keyboard_key_margin"
        android:padding="20dp"
        android:text="8"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="@+id/button5"
        app:layout_constraintRight_toRightOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:layout_conversion_absoluteHeight="64dp"
        tools:layout_conversion_absoluteWidth="117dp"
        tools:layout_conversion_absoluteX="237dp"
        tools:layout_conversion_absoluteY="193dp" />

    <Button
        android:background="@drawable/roundedbutton"
        android:textStyle="bold"
        android:id="@+id/button10"
        android:layout_width="79dp"
        android:layout_height="87dp"
        android:layout_marginLeft="@dimen/keyboard_key_margin"
        android:layout_marginTop="@dimen/keyboard_key_margin"
        android:padding="20dp"
        android:text="9"
        android:textSize="40dp"
        android:shape="oval"
        app:layout_constraintLeft_toRightOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:layout_conversion_absoluteHeight="64dp"
        tools:layout_conversion_absoluteWidth="117dp"
        tools:layout_conversion_absoluteX="237dp"
        tools:layout_conversion_absoluteY="193dp"
        />

    <Button
        android:background="@drawable/roundedbutton"
        android:textStyle="bold"
        android:id="@+id/button11"
        android:layout_width="79dp"
        android:layout_height="87dp"
        android:layout_marginRight="@dimen/keyboard_key_margin"
        android:layout_marginTop="@dimen/keyboard_key_margin"
        android:padding="20dp"
        android:text="X"
        android:textSize="40dp"
        app:layout_constraintRight_toLeftOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        tools:layout_conversion_absoluteHeight="64dp"
        tools:layout_conversion_absoluteWidth="117dp"
        tools:layout_conversion_absoluteX="237dp"
        tools:layout_conversion_absoluteY="193dp" />

    <Button
        android:background="@drawable/roundedbutton"
        android:textStyle="bold"
        android:id="@+id/button12"
        android:layout_width="79dp"
        android:layout_height="87dp"
        android:layout_marginLeft="@dimen/keyboard_key_margin"
        android:layout_marginRight="@dimen/keyboard_key_margin"
        android:layout_marginTop="@dimen/keyboard_key_margin"
        android:padding="20dp"
        android:text="0"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="@+id/button8"
        app:layout_constraintRight_toRightOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        tools:layout_conversion_absoluteHeight="64dp"
        tools:layout_conversion_absoluteWidth="117dp"
        tools:layout_conversion_absoluteX="237dp"
        tools:layout_conversion_absoluteY="193dp" />

    <Button
        android:background="@mipmap/okaybutton"
        android:id="@+id/button13"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="9dp"
        android:onClick="startAccountScreen"
        android:padding="20dp"
        android:text=""
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        tools:layout_conversion_absoluteHeight="64dp"
        tools:layout_conversion_absoluteWidth="117dp"
        tools:layout_conversion_absoluteX="237dp"
        tools:layout_conversion_absoluteY="193dp" />

    <TextView
        android:id="@+id/textZuButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:gravity="left"
        android:text="@string/yourNumber"
        android:textSize="35dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.526" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enterYourPin"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="left"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewYourNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/guideline3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="60dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline3" />

    <Button
        android:id="@+id/button14"
        android:layout_width="129dp"
        android:layout_height="64dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="5dp"
        android:onClick="startMobileActivity"
        android:text="@string/button14"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:background="@drawable/roundedbutton"
        android:textStyle="bold"
        android:id="@+id/button15"
        android:layout_width="79dp"
        android:layout_height="89dp"
        android:text=""
        app:layout_constraintLeft_toRightOf="@+id/button12"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <TextView
        android:id="@+id/textViewYourNumber"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:text="Error 42"
        android:textSize="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textZuButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0" />


</android.support.constraint.ConstraintLayout>